# flptdng

./: .gitignore  Cargo.toml  README.md
apps-python/ccxt-kraken/: async-orderbooks.py
apps-python/ccxt-pro-kraken/: README.md  REPLAY_USAGE.md  query_data.py  remove_tables.py  replay_server.py  requirements.txt  reset_db.py  reset_db.sh  setup_timescale_tables.sql  watch_order_book.py
apps-rs/cex-recorder/: Cargo.toml
apps-rs/cex-recorder/src/: main.rs
crates/kraken-client/: Cargo.toml
