[workspace]
members = ["./apps-rs/*", "./crates/*", "apps-rs/cex-recorder", "crates/kraken-client"]
default-members = ["./apps-rs/*", "./crates/*"]
resolver = "2"

#[profile.maxperf]
#inherits = "release"
#lto = "fat"
#codegen-units = 1
#incremental = false
#
#[profile.dev.package]
#insta.opt-level = 3
